@@ -1,16 +1,17 @@
 0.2 (I've been watching you...):
+ * Rewrote the screenshot module completely to support active window
+ screenshots and scaling. #3 #10 
  * Fixed a syntax bug in uigtk.py when GTK version is < 2.10
  * Changed strings in text to be more literal and intuitive 
  * Added option (-debug) to show all console output #5
  * Add options to report errors in the system tray (blinking true). #7
- * Rewrote the screenshot module completely to support active window
- screenshots and scaling. #3 #10 
  * Removed all useless type-checking and started relying on my own exceptions.
  * Recommented the whole code according to Epytext Markup and also did major
  tweaks to naming. #8
  * Better handling of Twisted errors in logging
  * Improved the configuration engine to convert numbers and bools into int and
  bool rather than str.
+ * Update configuration saving on a per-key basis not on a all-or-nothing dict differential #9
 
 0.1.1:
  * Fix Debian Makefile
